--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -9,8 +9,8 @@
   "AllowedHosts": "*",
   "Db": {
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "admin",
-    "TasksCollectionName": "Books",
+    "DatabaseName": "taskManager",
+    "TasksCollectionName": "taskItems",
     "TaskTemplatesCollectionName" : "taskTemplates"
   }
   }
